...

    <string name="QUIZ_URL" translatable="false"><![CDATA[http://quizzical.canadacentral.cloudapp.azure.com/quiz?classCode=%d&quizCode=%d]]></string>
    <string name="QUIZ_NUM_SCORE" translatable="false">quiz%sscore</string>
    <string name="TYPE" translatable="false">type=</string>

    <string name="app_name" translatable="false">quizzical</string>
    <string name="YES">yes</string>
    <string name="NO">no</string>

    <string name="curr_login_user" translatable="false">currLoginUser</string>
    <string name="LOGGED" translatable="false">logged</string>

    <string name="Continue_text">Continue</string>

    <!--    set an untranslatable version of username for server communication-->
    <string name="USER_INFO" translatable="false">userInfo</string>
...
    <string name="USER_QUIZ_COUNT" translatable="false">userQuizCount</string>
    <string name="FIREBASE_TOKEN" translatable="false">firebaseToken</string>
    <string name="NOTIFICATION_FREQ" translatable="false">notificationFrequency</string>

    <string name="TRUE" translatable="false">True</string>
    <string name="FALSE" translatable="false">False</string>
    <string name="OK" translatable="false">OK</string>

    <string name="IS_INSTRUCTOR" translatable="false">isInstructor</string>
    <string name="INSTRUCTOR_UID" translatable="false">instructorUID</string>

    <string name="CREATE_CLASS" translatable="false">createClass</string>
    <string name="JOIN_CLASS" translatable="false">joinClass</string>
    <string name="CLASS_CODE" translatable="false">classCode</string>
    <string name="CLASS_NAME" translatable="false">className</string>
    <string name="CLASS_LIST" translatable="false">classList</string>
    <string name="CLASS_INFO" translatable="false">classInfo</string>
    <string name="CURR_CLASS_CODE" translatable="false">currClassCode</string>
    <string name="CURR_CLASS" translatable="false">currClass</string>

    <string name="QUIZ" translatable="false">quiz</string>
    <string name="QUIZ_CODE" translatable="false">quizCode</string>
...
    <string name="UI_is_instructor_msg">Are you an instructor?</string>

    <string name="UI_require_valid_username_email_msg">Please enter valid username and email</string>

    <!--    used for home activity-->
    <string name="UI_quizzes">Quizzes</string>
    <string name="UI_class_statistics">Class Statistics</string>
    <string name="UI_leader_board">LeaderBoard</string>
    <string name="UI_profile">Profile</string>

    <string name="UI_example_course_code" translatable="false">E.g. 123456</string>
    <string name="UI_invalid_class_code_msg">Invalid class code</string>
    <string name="UI_enter_class_code_msg">Please enter your class code</string>
    <string name="UI_class_joined_msg">You have joined the class</string>
    <string name="UI_class_joined_already_msg">You have already joined the class</string>

    <string name="UI_creating_class_msg">Creating class</string>
    <string name="UI_select_course_category_msg">Please select a course category</string>
    <string name="UI_select_grade_level_msg">Please select your class grade level</string>
    <string name="UI_enter_class_name_msg">Please enter class name</string>
...
    <string name="UI_student_delete_course">Do you want to quit this course?</string>

    <!--    used in quiz fragment-->
    <string name="UI_no_data">No data.</string>
    <string name="go_to_quiz">Go to Quiz</string>
    <string name="UI_default_module_text">module 1</string>
    <string name="UI_wrong_questions">Wrong Questions</string>
    <string name="UI_stats">stats</string>
    <string name="UI_notes">notes</string>
    <string name="UI_personal_score_string">your score: %.2f</string>
    <string name="UI_highest_score_text">highest: %.2f</string>
    <string name="UI_average_score_text">Average: %.2f</string>

    <string name="UI_create_new_module">Create new module</string>
...
    <string name="UI_create_answer">Add Answer</string>
    <string name="UI_delete">Delete</string>
    <string name="UI_quit_quiz_editing_warning">Do you want to discard the quiz editing? Note that all your progress will be lost!</string>

    <!--    used in leader board fragment (for students)-->
    <string name="leader_board_page_text1" translatable="false">This is the Leaderboard page</string>
    <string name="UI_teachers_leaderboard">Teacher\'s Leaderboard</string>
    <string name="UI_leaderboard_number" translatable="false">#</string>
    <string name="UI_leaderboard_score">Score</string>
    <string name="UI_back_to_statistics">Back to Statistics</string>
    <string name="UI_current_class_name">Current class name: %s</string>

    <!--    used in profile fragment-->
    <string name="UI_change_profile_image_msg">Do you want to change the profile image?</string>
    <string name="UI_change_username">change username</string>
    <string name="UI_change_email">change email</string>
    <string name="UI_statistics">Statistics</string>
...
        <item>Monthly</item>
    </string-array>

    <!--    used in quiz activity-->
    <string name="UI_error_generating_quiz_page_msg">An error occurred, press next to continue</string>
    <string name="UI_question">Question</string>
    <string name="UI_next">Next Question</string>
    <string name="UI_error_loading_pic_msg">Error loading picture</string>
    <string name="UI_quiz_pic_msg">You may need to scroll down to see the picture</string>
    <string name="UI_submit">Submit</string>
    <string name="UI_finish">Finish</string>
    <string name="UI_no_answer_response_msg">Please answer the question before submission.</string>

    <string name="UI_in_quiz_correct_msg">You are correct. You got %d/%d correct.</string>
    <string name="UI_in_quiz_wrong_msg">You are wrong. You got %d/%d correct.</string>

    <string name="correct_num" translatable="false">correctNum</string>
    <string name="total_num" translatable="false">totalNum</string>
    <string name="wrong_question_ids" translatable="false">wrongQuestionIds</string>
    <string name="quiz_result" translatable="false">Quiz %d result</string>
    <string name="EXP_earned_for_quiz" translatable="false">EXP earned</string>

    <string name="VOTE_FOR_LIKE" translatable="false">like</string>

    <string name="UI_quit_quiz_warning">Do you want to end the quiz? Note that all your progress will be lost!</string>

    <!--    used in quiz finish activity-->
    <string name="UI_quiz_finished_earned_exp_msg">You got %d EXP!</string>
    <string name="UI_quiz_finished_low_score_msg">You got %d/%d correct. Keep learning!</string>
    <string name="UI_quiz_finished_full_score_msg">You got %d/%d correct. Congratulations!</string>
    <string name="UI_quiz_finished_normal_score_msg">You got %d/%d correct. Great work!</string>
...
