...
                android:gravity="center_horizontal"
                android:text="@string/UI_finish_quiz_msg"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/quiz_finished_page_response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/UI_quiz_finished_full_score_msg"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/quiz_finished_page_exp_earned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/UI_quiz_finished_earned_exp_msg"
                android:textColor="@color/colorGolden"
...
