...

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:id="@+id/quiz_page_refresh_layout">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/quiz_list_layout"
                android:layout_width="match_parent"
...
